--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,32 @@
-node_modules
-*.log*
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+.output
 .nuxt
 .nitro
 .cache
-.output
-.env
+
+node_modules
 dist
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.fleet
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.env.*
+!.env.example
+dev-dist
